feat: named run configurations (:LatheRun {name})
Implements TE-2: named, explicitly-selected run/debug configurations layered on
the shipped run-config overlay machinery, modeled on IntelliJ run configs.

The overlay file becomes a { defaults, configs } object (clean break; no
adopters, no migration), mapped to records via Gson rather than hand-walked:

- defaults[]: baseline overlays keyed by (module, kind), auto-applied to
  cursor/gutter runs and inherited by named configs.
- configs{}: name-keyed entries that pin a target (mainClass for MAIN,
  selectors for TEST) plus overlay fields, selected explicitly by name.

Server:
- RunItem gains name/mainClass/selectors; RunConfigFile/RunConfigEntry/
  RunSelector DTOs map the file; RunConfigReader builds a RunOverlaySet with
  defaultFor (baselines, most-specific-wins) and byName (a config composed over
  its matching baseline).
- RunConfigWriter upserts configs[name] in .lathe/run.json only (atomic;
  preserves defaults and sibling configs) — the sole run-config write path;
  nothing is written on a run.
- New commands lathe.run.named, lathe.debug.named, lathe.runconfigs.list,
  lathe.runconfig.save, wired through WorkspaceSession; the run flow threads the
  resolved overlay, and the console header plus the run INFO log carry the
  active config label.

Neovim:
- :LatheRun {name} / :LatheDebug {name} with server-provided completion,
  :LatheRunSave[!] [name] (cursor-target resolution ladder, server-derived
  name, bang overwrites), and :LatheRunOutput to reopen the run console.

Docs: rewrote docs/guide/run-configuration.md, updated README and status.md,
resolved gap TE-2; design in docs/planned/lathe-named-run-configs.md.
Tests: RunItem/RunConfigReader/RunConfigWriter/RunOverlaySet units, updated
RunOverlay + LatheLanguageServer command-advertisement tests, a run_save
Neovim spec, and a headless-nvim E2E harness (dev/run-config-e2e.sh) driving
the multi-module invoker fixture end to end.

Co-Authored-By: Claude Opus